fixed z-index for pinterest pins

--- a/assets/stylesheets/_navbar.scss
+++ b/assets/stylesheets/_navbar.scss
@@ -3,6 +3,7 @@
   border-bottom: 1px $theme-gray;
   font-family: $base-font-sans;
   background-color: $theme-gray;
+  z-index: 8675310;
 }
 
 .navbar-custom .navbar-toggle {
